--- a/about.html
+++ b/about.html
@@ -40,10 +40,9 @@
       </p>
       <div class="jumbotron jumbotron-fluid">
       <div class="container">
-      <h1 class="display-4">Fluid jumbotron</h1>
-      <p class="lead">These are pictures of famouse Nintendo games.</p>
       </div>
-</div>
+      <p id="readmore"><a href="https://www.hypable.com/10-best-nintendo-games/">Read More</a></p>
+      </div>
     </main>
     <footer>
       <p> Author: Megan, Melody, May </p>
