--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
     <h2>
       The Simple Joy of Spending All Your Money
     </h2>
-    <img src="img/money.jpg">
+    <img src="img/money.jpg" class="right">
     <p>
       Suspendisse volutpat nisl elit, nec interdum quam dapibus non. Sed id ligula vel enim ornare tempus lacinia non arcu. Praesent dictum varius quam, pretium gravida nulla scelerisque vitae. Ut nec pharetra nisl. Ut condimentum, purus non porta vehicula, magna odio egestas libero, ut euismod ipsum justo non enim. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus dolor leo, ornare vitae odio id, fringilla interdum ex. Nam non accumsan sem. Quisque ut libero gravida, cursus dolor quis, commodo purus. 
     </p>
+    <div class="holder"></div>
     <h2>
       How Completing the Pokedex Ruined my Sanity
     </h2>
