--- a/about.html
+++ b/about.html
@@ -41,7 +41,9 @@
       <div class="jumbotron jumbotron-fluid">
       <div class="container">
       </div>
-      <p id="readmore"><a href="https://www.hypable.com/10-best-nintendo-games/">Read More</a></p>
+      </div>
+      <div>
+        <p id="readmore"><a href="https://www.hypable.com/10-best-nintendo-games/">Read More</a></p>
       </div>
     </main>
     <footer>
