--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./about.html">About</a>
@@ -70,8 +70,8 @@
     <div class="holder"></div>
     </main>
      <script src="script.js"></script>  <footer>
-    <p> Author: Megan, Melody, May </p>
-    <p> Contact: abcd@email.com </p>
+    <p> Author: Mei, Megan, Melody </p>
+    <p> Contact: https://www.linkedin.com/in/meixiaomeiwang/ </p>
     <p> Generation USA Group Project </p>
     <p><a href="https://usa.generation.org/">Link to Generation USA</a></p>
   </footer>
