--- a/contact.html
+++ b/contact.html
@@ -72,8 +72,8 @@
     <div class="holder"></div>
     
     <footer>
-      <p> Author: Megan, Melody, May </p>
-      <p> Contact: abcd@email.com </p>
+      <p> Author: Mei, Megan, Melody </p>
+      <p> Contact: https://www.linkedin.com/in/meixiaomeiwang/</p>
       <p> Generation USA Group Project </p>
       <p><a href="https://usa.generation.org/">Link to Generation USA</a></p>
     </footer>
